# omr

./: .gitignore  CMakeLists.txt  machinery_of_the_SC.txt
cmake/: config.cmake
cmake/modules/: OmrCompilerSupport.cmake
compiler/: CMakeLists.txt
compiler/codegen/: OMRAheadOfTimeCompile.hpp  OMRCodeGenPhase.cpp  OMRCodeGenerator.cpp  OMRCodeGenerator.hpp  Relocation.cpp  Relocation.hpp
compiler/compile/: CMakeLists.txt  DisplacementSites.cpp  DisplacementSites.hpp  Method.cpp  OMRCompilation.cpp  OMRCompilation.hpp  OMRSymbolReferenceTable.cpp  OMRSymbolReferenceTable.hpp  ResolvedMethod.hpp  VirtualGuard.cpp  VirtualGuard.hpp
compiler/control/: CompileMethod.cpp  CompileMethod.hpp
compiler/env/: AotAdapter.hpp  CMakeLists.txt  CompileTimeProfiler.hpp  FEBase.hpp  FEBase_t.hpp  OMRAotAdapter.cpp  OMRAotAdapter.hpp  OMRCompilerEnv.cpp  OMRCompilerEnv.hpp  OMRObjectModel.hpp  OMRPersistentInfo.hpp  OMRSharedCache.cpp  OMRSharedCache.hpp  OMRVMEnv.hpp  OMRVirtualDispatchKey.hpp  RuntimeAssumptionTable.hpp  SharedCache.hpp  TRMemory.cpp  TRMemory.hpp  VirtualDispatchKey.hpp
compiler/il/: OMRILOpCodesEnum.hpp  OMRNode.cpp  OMRNode.hpp
compiler/ilgen/: OMRIlBuilder.cpp  OMRIlBuilder.hpp  OMRMethodBuilder.cpp  OMRMethodBuilder.hpp  OMRThunkBuilder.cpp  OMRVirtualMachineOperandStack.cpp  OMRVirtualMachineOperandStack.hpp
compiler/optimizer/: VPHandlers.cpp  ValuePropagationTable.hpp
compiler/ras/: Debug.hpp
compiler/runtime/: CMakeLists.txt  (+25 more)
example/: CMakeLists.txt
gc/: CMakeLists.txt
include_core/: OMR_VMThread.hpp  omr.h  omrargscan.h  omrcomp.h  omrmemcategories.h  omrport.h  omrporterror.h  omrsimplepool.h  omrsrphashtable.h  omrutil.h  shchelp.h  simplepool_api.h  srphashtable_api.h
jitbuilder/: CMakeLists.txt
nls/: shrnls.h
port/: CMakeLists.txt  omrportpriv.h
runtime/: RuntimeAssumptionTable.cpp
runtime/shared_common/modifications/wasm/: CMakeLists.txt  WASMCacheEntry.hpp  WASMCompositeCache.cpp  WASMCompositeCache.hpp  WASMDataSectionEntryIterator.cpp  WASMDataSectionEntryIterator.hpp  WASMHashTableEntry.hpp  WASMOSCache.cpp  WASMOSCache.hpp  WASMOSCacheConfig.cpp  WASMOSCacheConfig.hpp  WASMOSCacheConfigOptions.hpp  WASMOSCacheHeader.cpp  WASMOSCacheHeader.hpp  WASMOSCacheHeaderMapping.hpp  WASMOSCacheIterator.hpp  WASMOSCacheLayout.cpp  WASMOSCacheLayout.hpp  omrshr_mods.tdf
(+238 files in other folders)
